kubernetes/apps/system-upgrade/nut-shutdown/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nut-exporter
  labels:
    app: nut-shutdown
spec:
  selector:
    app: nut-shutdown
  ports:
    - name: metrics
      port: 9199
      targetPort: metrics
      protocol: TCP
