kubernetes/apps/system-upgrade/nut-shutdown/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nut-shutdown
spec:
  endpointSelector:
    matchLabels:
      app: nut-shutdown
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toCIDR:
        - 192.168.42.41/32
        - 192.168.42.42/32
        - 192.168.42.43/32
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP
    - toEntities:
        - world
